<resources>
    <string name="app_name">토리메타</string>
    <string name="notification_default_channel_id">fcm_default_channel</string>
    <string name="notification_default_channel_name">General</string>
    <string name="main_tab_nft">NFT</string>
    <string name="main_tab_campus">캠퍼스</string>
    <string name="main_tab_game">Game</string>
    <string name="main_tab_mymenu">My 메뉴</string>
    <string name="system_alert_exit_app">뒤로가기 버튼을 한번 더 누르면 종료됩니다.</string>
    <string name="system_alert_permission_denied">권한이 거부되어 기능을\n실행할 수 없습니다.\n설정 > 애플리케이션 정보 > 토리메타 >\n권한 메뉴에서 권한 허용 후\n이용해주세요.</string>
    <string name="location_permission_denied">앱의 위치 권한이 없습니다.\n위치 권한을 활성화 해주세요.</string>
    <string name="system_alert_btn_ok">확인</string>
    <string name="system_alert_btn_cancel">취소</string>
    <string name="system_alert_btn_close">닫기</string>
    <string name="system_alert_update">안정적인 서비스 사용을 위해\n최신 버전으로 업데이트해주세요.</string>
    <string name="system_alert_update_btn_cancel">다음에</string>
    <string name="system_alert_update_btn_update">업데이트</string>
    <string name="system_alert_network_error_restart">네트워크 연결이 원활하지 않습니다.\n확인 후 앱을 다시 실행해주세요.</string>
    <string name="system_alert_network_warning">네트워크 연결이 불안정하여\n데이터를 불러오지 못했습니다.</string>
    <string name="system_alert_seminar_not_started">세미나 시작 전입니다.</string>
    <string name="system_alert_seminar_finished">이미 종료된 세미나입니다.</string>
    <string name="onboarding_header_01">오늘은 캠퍼스에\n또 무슨 일이!</string>
    <string name="onboarding_header_02">마일리지를 모으고,\n다양하게 즐기자!</string>
    <string name="onboarding_header_03">현실과 메타버스를\n넘나드는 캠퍼스 라이프!</string>
    <string name="onboarding_desc_01">나의 상태와 위치를 친구들과 공유하고\n모임등을 생성 및 참여하여\n그에 따른 포인트를 모아보세요</string>
    <string name="onboarding_desc_02">캠퍼스 활동을 통해 마일리지를 모으고,\nNFT에서 사용 가능해요!\n마일리지를 활용하여 캠퍼스 생활을 즐겨보세요.</string>
    <string name="onboarding_desc_03">현실 캠퍼스와 메타캠퍼스를 넘나들며\n친구들과 다양한 콘텐츠를 즐기고,\n다양한 이벤트들도 놓치지 마세요!</string>
    <string name="onboarding_btn_start">시작하기</string>
    <string name="onboarding_btn_login">로그인하기</string>
    <string name="onboarding_account_info">이미 계정이 있나요?</string>
    <string name="university_select_title">학교선택</string>
    <string name="university_select_desc_01">대학교를\n선택해주세요.</string>
    <string name="university_select_desc_02">대학교 선택</string>
    <string name="university_select_btn_complete">완료</string>
    <string name="campus_title_torytalk">토리톡</string>
    <string name="campus_title_together">우리끼리</string>
    <string name="campus_title_schoolmeal">오늘의 학식</string>
    <string name="campus_title_school">교내행사</string>
    <string name="campus_visit_select_title">학교를 선택하세요.</string>
    <string name="marker_detail_location_off">위치 공유\nOFF</string>
    <string name="campus_board_title_market">토리마켓</string>
    <string name="campus_board_title_gather">모임해요</string>
    <string name="campus_board_title_talk">수다세상</string>
    <string name="campus_board_title_help">도와주세요</string>
    <string name="my_page_title">마이 계정</string>
    <string name="my_page_point_format">%d 토리</string>
    <string name="my_page_point_format_01">%1$s 토리</string>
    <string name="my_page_mileage_format">%d M</string>
    <string name="my_page_mileage_format_01">%1$s M</string>
    <string name="my_page_tory_point_info_title">토리란?</string>
    <string name="my_page_tory_point_info_desc">토리메타에서 상품 구매에 이용할 수 있는\n미리 예치한 현금성 금액입니다.\n(유효기간: 충전 후 5년)</string>
    <string name="my_page_mileage_info_title">마일리지란?</string>
    <string name="my_page_mileage_info_desc">토리메타에 이벤트,미션을 수행하여 무료\n지급받은 금액입니다.\n(환불불가 / 유효기간: 지급일로부터 1년)</string>
    <string name="my_page_write_title">내가 쓴 글</string>
    <string name="my_page_comment_title">내가 쓴 댓글</string>
    <string name="shop_title">토리 충전</string>
    <string name="shop_my_point_title">보유 토리</string>
    <string name="shop_item_name_title">충전 캐시</string>
    <string name="shop_item_price_title">결제 금액</string>
    <string name="shop_point_info_title">이용 안내</string>
    <string name="shop_point_info_desc">· 토리 유효기간은 충전 후 5년입니다.\n· 환불 문의는 토리메타 고객센터로 부탁드립니다.</string>
    <string name="profile_title">프로필 설정</string>
    <string name="profile_change_title">프로필 변경</string>
    <string name="profile_change_sheet_btn_camera">카메라</string>
    <string name="profile_change_sheet_btn_album">앨범 사진</string>
    <string name="profile_change_sheet_btn_nft">NFT 컬렉션 사진</string>
    <string name="profile_change_sheet_btn_default">기본 프로필</string>
    <string name="profile_change_sheet_btn_cancel">취소</string>
    <string name="my_page_image_collection_empty">선택할 사진이 없습니다.</string>
    <string name="my_page_write_emtpy">아직 작성한 글이 없습니다.</string>
    <string name="my_page_comment_emtpy">아직 작성한 댓글이 없습니다.</string>
    <string name="notification_setting_title">로그인 / 알림설정</string>
    <string name="notification_setting_login_title">로그인 설정</string>
    <string name="notification_setting_auto_login">자동로그인</string>
    <string name="notification_setting_noti_title">이벤트 및 혜택 수신 설정</string>
    <string name="notification_setting_event_push">APP PUSH</string>
    <string name="notification_setting_event_email">E-mail / 문자</string>
    <string name="notification_setting_event_sms">SMS</string>
    <string name="friend_alert_send_request">%s님에게 친구 요청을 보냈습니다.</string>
    <string name="friend_alert_accept">%s님이 친구로 등록되었습니다.</string>
    <string name="friend_alert_delete_title">대화상대 삭제</string>
    <string name="friend_alert_delete_msg">\"%s\" 친구를 삭제하면\n해당 친구 목록에서 내 정보도\n삭제됩니다.</string>
    <string name="friend_alert_delete_btn">삭제</string>
    <string name="friend_alert_block_title">대화상대 차단</string>
    <string name="friend_alert_block_msg">\"%s\" 친구를 차단하면\n메세지 전송 및 내 위치가 공유되지\n않습니다. 차단하시겠습니까?</string>
    <string name="friend_alert_block_btn">차단</string>
    <string name="friend_alert_unblock_btn">해제</string>
    <string name="tory_talk_title">토리톡</string>
    <string name="tory_talk_friend_list_title">친구 목록</string>
    <string name="tory_talk_chat_list_title">채팅 목록</string>
    <string name="friend_list_title_new">새로운 친구</string>
    <string name="friend_list_title_request">친구 요청 목록</string>
    <string name="friend_list_title_campus">캠퍼스에 있는 친구들</string>
    <string name="friend_list_title_unknown_location">위치를 알 수 없는 친구들</string>
    <string name="friend_list_title_block">차단한 친구들</string>
    <string name="friend_list_block">친구 차단 리스트</string>
    <string name="friend_cell_send_request">친구 요청</string>
    <string name="friend_cell_send_request_complete">요청 완료</string>
    <string name="friend_cell_accept">수락</string>
    <string name="friend_cell_unblock">차단 해제</string>
    <string name="friend_detail_nft_list_title">최근 등록된 NFT 리스트</string>
    <string name="friend_detail_nft_list_empty">NFT 컬렉션 리스트가 없습니다.</string>
    <string name="friend_detail_btn_call">전화하기</string>
    <string name="friend_detail_btn_chat">채팅하기</string>
    <string name="friend_search_title">친구 검색</string>
    <string name="friend_search_hint">친구 프로필명 또는 휴대폰번호를 입력하세요.</string>
    <string name="attendance_check">출석체크 하러가기</string>
    <string name="not_seen_for_a_week">일주일간 보지 않기</string>
    <string name="close">닫기</string>
    <string name="tutorial_close">다시 보지 않기</string>
    <string name="auto_login_on">자동로그인이 설정되었습니다.</string>
    <string name="auto_login_off">자동로그인이 해제되었습니다.</string>
    <string name="push_receive_on">광고성 푸시알림 수신여부가 동의 처리 되었습니다.</string>
    <string name="push_receive_off">광고성 푸시알림 수신여부가 거부 처리 되었습니다.</string>
    <string name="email_receive_on">광고성 E-mail/문자 수신여부가 동의 처리 되었습니다.</string>
    <string name="email_receive_off">광고성 E-mail/문자 수신여부가 거부 처리 되었습니다.</string>
    <string name="tory_point_title_history">토리 내역</string>
    <string name="tory_my_point">보유 토리</string>
    <string name="mileage_point_title_history">마일리지 내역</string>
    <string name="mileage_my_point">보유 마일리지</string>
    <string name="mileage_point_transaction_empty">거래 내역이 없습니다.</string>
    <string name="charge_point_empty">충전 내역이 없습니다.</string>
    <string name="charge_history">충전내역</string>
    <string name="transaction_history">거래내역</string>
    <string name="period_one_week">1주일</string>
    <string name="period_one_month">1개월</string>
    <string name="period_six_month">6개월</string>
    <string name="period_one_year">1년</string>
    <string name="period_total">전체</string>
    <string name="query_period_one_week">1w</string>
    <string name="query_period_one_month">1m</string>
    <string name="query_period_six_month">6m</string>
    <string name="query_period_one_year">1y</string>
    <string name="query_period_all">all</string>
    <string name="date">일자</string>
    <string name="history">내역</string>
    <string name="add">적립</string>
    <string name="subtract">차감</string>
    <string name="validity_date">유효기간</string>
    <string name="point_add_format">적립 %1$s</string>
    <string name="point_subtract_format">차감 %1$s</string>
    <string name="expire_time_format">유효기간 %1$s</string>
    <string name="tory_charge_format">+토리충전 %1$s</string>
    <string name="tory_refund_format">-환불 %1$s</string>
    <string name="event_on_title">EVENT ON</string>
    <string name="game_title">Game</string>
    <string name="next">다음</string>
    <string name="network_error_message">네트워크 연결상태를 확인해 주세요.</string>
    <string name="str_comfirm">확인</string>
    <string name="str_cancel">취소</string>
    <string name="permission_title">앱 접근 권한 안내</string>
    <string name="permission_desc">토리메타 서비스 사용을 위해 다음 권한의 허용이\n필요합니다</string>
    <string name="permission_location_title">위치 (필수)</string>
    <string name="permission_location_desc">서비스(대학교) 지역 진입 확인 및 내 위치 확인</string>
    <string name="permission_record_title">마이크 (선택)</string>
    <string name="permission_record_desc">동영상 촬영 및 업로드시 접근</string>
    <string name="permission_body_sensor_title">신체활동 (선택)</string>
    <string name="permission_body_sensor_desc">사용자의 움직임을 측정</string>
    <string name="permission_camera_title">카메라 (선택)</string>
    <string name="permission_camera_desc">사진 및 동영상 촬영</string>
    <string name="permission_photo_album_title">사진 (선택)</string>
    <string name="permission_photo_album_desc">사진 및 동영상 업로드</string>
    <string name="permission_phonebook_title">주소록 (선택)</string>
    <string name="permission_notice_title">알림 (선택)</string>
    <string name="permission_notice_desc">공지사항, 채팅기능 등의 알림을 위한 권한</string>
    <string name="permission_phonebook_desc">토리톡의 친구목록을 불러오기 위한 접근</string>
    <string name="permission_comment_01">· 허용하지 않으셔도 앱 이용은 가능하나, 일부 서비스 이용에\n제한이 있을 수 있습니다.</string>
    <string name="permission_comment_02">· ‘설정 > 애플리케이션 > 토리메타 > 권한’에서 각 권한 별 변경이 가능합니다.</string>
    <string name="str_permission_message">앱 실행에 필요한 권한을 허용해주세요.</string>
    <string name="pedometer_title">뚜벅이</string>
    <string name="pedometer_step_title">캠퍼스 뚜벅이</string>
    <string name="campus_inner_title">캠퍼스 내부</string>
    <string name="campus_out_title">캠퍼스 외부</string>
    <string name="now_step_title">현재 걸음 수</string>
    <string name="steps_per_total">/ %1$s 걸음</string>
    <string name="steps_per_max">%1$s 걸음</string>
    <string name="steps_per_reward">%1$sM 받기</string>
    <string name="steps_receive_reward">%1$sM 받음</string>
    <string name="milage_alert_title">마일리지 지급</string>
    <string name="steps_not_fill_message">아직 걸음 수를\n채우지 못했습니다.</string>
    <string name="password_dialog_title">[비공개 세미나] 비밀번호 입력</string>
    <string name="password_title">비밀번호</string>
    <string name="password_input_hint">비밀번호를 입력해주세요.</string>
    <string name="password_title_comfirm">비밀번호 확인</string>
    <string name="password_re_enter">비밀번호 재입력</string>
    <string name="avatar_sort_filter">필터</string>
    <string name="avatar_sort_done">완료</string>
    <string name="avatar_sort">정렬</string>
    <string name="avatar_sort_default">기본정렬</string>
    <string name="avatar_sort_popular">인기순</string>
    <string name="avatar_sort_price_desc">높은 가격순</string>
    <string name="avatar_sort_price_asc">낮은 가격순</string>
</resources>