<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/common_bottom_sheet_bg"
    android:paddingTop="@dimen/campus_visit_select_padding_top"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_top_bar_height"
        android:paddingHorizontal="@dimen/campus_visit_select_padding_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/avatar_sort_filter"
            android:gravity="center_vertical"
            android:textSize="@dimen/common_text_font_14"
            android:textColor="@color/tory_black"
            android:fontFamily="@font/noto_sans_semi_bold"
            android:includeFontPadding="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/avatar_sort_done"
            android:textSize="14sp"
            android:gravity="center"
            android:fontFamily="@font/noto_sans_semi_bold"
            android:textColor="@color/tory_purple"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/title"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avatar_sort"
        android:textSize="14sp"
        android:fontFamily="@font/noto_sans_semi_bold"
        android:paddingHorizontal="@dimen/campus_visit_select_padding_horizontal"
        android:textColor="@color/tory_black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_layout" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/check_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/campus_visit_select_padding_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/txt_sort"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/sort_basic"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/noto_sans_regular"
                    android:text="@string/avatar_sort_default"
                    android:textColor="@color/tory_black"
                    android:textSize="@dimen/common_text_font_14" />

                <RadioButton
                    android:checked="true"
                    android:id="@+id/sort_basic"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_radio_button"
                    android:textColor="@color/tory_black"
                    android:button="@null"
                    android:textAlignment="center" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/noto_sans_regular"
                    android:text="@string/avatar_sort_popular"
                    android:textColor="@color/tory_black"
                    android:textSize="@dimen/common_text_font_14" />
                <RadioButton
                    android:id="@+id/sort_popularity"
                    android:checked="false"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_radio_button"
                    android:textColor="@color/tory_black"
                    android:button="@null"
                    android:textAlignment="center" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/noto_sans_regular"
                    android:text="@string/avatar_sort_price_desc"
                    android:textColor="@color/tory_black"
                    android:textSize="@dimen/common_text_font_14" />
                <RadioButton
                    android:id="@+id/sort_higherPrice"
                    android:checked="false"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_radio_button"
                    android:textColor="@color/tory_black"
                    android:button="@null"
                    android:textAlignment="center" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/noto_sans_regular"
                    android:text="@string/avatar_sort_price_asc"
                    android:textColor="@color/tory_black"
                    android:textSize="@dimen/common_text_font_14" />
                <RadioButton
                    android:id="@+id/sort_lowestPrice"
                    android:checked="false"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_radio_button"
                    android:textColor="@color/tory_black"
                    android:button="@null"
                    android:textAlignment="center" />
            </RelativeLayout>

            <RelativeLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatTextView
                    android:text="이름순"
                    android:layout_centerInParent="true"
                    android:layout_alignParentLeft="true"
                    android:textSize="@dimen/common_text_font_14"
                    android:textColor="@color/tory_black"
                    android:fontFamily="@font/noto_sans_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/sort_name"
                    android:checked="false"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_radio_button"
                    android:textColor="@color/tory_black"
                    android:button="@null"
                    android:textAlignment="center" />
            </RelativeLayout>
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>