<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    tools:context=".seminar.dialog.SeminarPasswordBottomDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_top_bar_height"
        android:paddingHorizontal="@dimen/campus_visit_select_padding_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/password_dialog_title"
            android:gravity="center_vertical"
            android:textSize="@dimen/common_text_font_14"
            android:textColor="@color/tory_black"
            android:fontFamily="@font/noto_sans_semi_bold"
            android:includeFontPadding="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/close"
            android:visibility="invisible"
            android:layout_width="0dp"
            android:layout_height="@dimen/shop_item_padding_horizontal"
            android:background="@drawable/close"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/title" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginTop="54dp"
        android:paddingHorizontal="@dimen/campus_visit_select_padding_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_title"
            android:textSize="@dimen/common_text_font_14"
            android:textColor="@color/tory_black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <RelativeLayout
            android:id="@+id/edit_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tory_talk_friend_list_cell_height"
            android:layout_marginTop="11dp"
            app:layout_constraintTop_toBottomOf="@id/txt_password">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:textSize="@dimen/common_text_font_20"
                android:textColor="@color/gray6"
                android:inputType="textPassword"
                android:hint="@string/password_input_hint"
                android:textColorHint="@color/color_d9d9d9d"
                android:paddingRight="40dp"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/editBoxDeleteBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:background="@drawable/friend_search_edit_box_btn_delete"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dip"
                />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_password_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_title_comfirm"
            android:textSize="@dimen/common_text_font_14"
            android:layout_marginTop="46dp"
            android:textColor="@color/tory_black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_layout"
            />

        <RelativeLayout
            android:id="@+id/edit_comfirm_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tory_talk_friend_list_cell_height"
            android:layout_marginTop="11dp"
            app:layout_constraintTop_toBottomOf="@id/txt_password_confirm">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:textSize="@dimen/common_text_font_20"
                android:textColor="@color/gray6"
                android:inputType="textPassword"
                android:hint="@string/password_re_enter"
                android:textColorHint="@color/color_d9d9d9d"
                android:paddingRight="40dp"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/edit_confirm_deleteBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:background="@drawable/friend_search_edit_box_btn_delete"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dip"
                />

            <!--
            <View
                android:id="@+id/edit_confirm_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/color_d9d9d9d"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_confirm_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:textColor="@color/gray6"
                android:inputType="textPassword"
                android:textSize="@dimen/common_text_font_20"
                android:textColorHint="@color/color_d9d9d9d"
                android:hint="@string/password_re_enter"
                android:background="@null"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/edit_confirm_deleteBtn"
                />
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/edit_confirm_deleteBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:background="@drawable/friend_search_edit_box_btn_delete"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
            -->

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/apply"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@drawable/round_apply"
            android:clickable="true"
            android:layout_marginTop="36dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_comfirm_layout"
            app:layout_constraintRight_toRightOf="parent">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system_alert_btn_ok"
                android:textSize="@dimen/common_text_font_20"
                android:textColor="@color/tory_white"
                android:fontFamily="@font/noto_sans_semi_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
